<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFF0"
    tools:context="kmitl.project.benjarat58070079.hawkeyes.AddNeewFeedActivity">

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_height="120px"
        android:text="Add new post."
        android:background="#88BBAA"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_marginLeft="10px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Write Post :"/>


        <EditText
            android:id="@+id/text_post"
            android:layout_width="match_parent"
            android:layout_height="200px"
            android:ems="10"
            android:inputType="textMultiLine" />

    </LinearLayout>



        <TextView
            android:layout_marginTop="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="Event Type :"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_type"/>


    <LinearLayout
        android:layout_marginLeft="10px"
        android:layout_marginTop="20px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Click here to get the location of accident : "/>

    <ImageButton
        android:layout_marginLeft="50px"
        android:onClick="onPlacePicker"
        android:layout_width="100px"
        android:layout_height="100px"
        android:background="@drawable/ic_gps_fixed_indicator"/>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="10px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address : "/>

        <TextView
            android:id="@+id/placeAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Place Address"/>

    </LinearLayout>



    <Button
        android:background="#FFFFF0"
        android:layout_marginTop="50px"
        android:layout_gravity="center"
        android:onClick="onSubmitData"
        android:textStyle="bold"
        android:textColor="#88BBAA"
        android:layout_width="150px"
        android:layout_height="100px"
        android:text="send"/>





</LinearLayout>
