<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFF0"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="kmitl.project.benjarat58070079.hawkeyes.HomePageActivity"
    tools:showIn="@layout/app_bar_home_page">

</android.support.constraint.ConstraintLayout>
