<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="kmitl.project.benjarat58070079.hawkeyes.Fragment.NewFeedFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10px"
        android:layout_weight="3" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right|end"
        android:layout_margin="10dp"
        android:clickable="true"
        android:src="@mipmap/ic_add_white_24dp"
        app:backgroundTint="#A3E7D8"
        app:fabSize="normal"/>


</FrameLayout>
